Wrapping fix for inline callout module
- fixed issue where arrow wasn't displaying correctly
  when there was a couple of rows of text in the callout

--- a/app/assets/stylesheets/components/article_body/_inline_callout.scss
+++ b/app/assets/stylesheets/components/article_body/_inline_callout.scss
@@ -15,15 +15,16 @@
   float: right;
   text-align: right;
   padding: baseline-unit(2);
+  padding-right: baseline-unit(10);
   background-color: white;
 }
 
 .inline-callout__arrow {
   float: right;
-  position: relative;
+  position: absolute;
   width: 20px;
-  top: 0;
-  right: 6px;
+  top: 30%;
+  right: 17px;
   margin-left: baseline-unit(5);
 }
 
